资料/MT设备/二次开发例程及接口文件V3.16.2/接口文件3.16.2/3.16.2_Multi/32bit/MT_API.bas

'VB接口文件
'3.16.2

Option Explicit

Public Const R_OK =0
Public Const RUN_OFF =0
Public Const RUN_ON =1
Public Const DIR_NEG =0
Public Const DIR_POS =1
Public Const LIMIT_ON =1
Public Const LIMIT_OFF =0
Public Const RESOURCE_MOTOR =&H00000001
Public Const RESOURCE_TTL_IN =&H00000002
Public Const RESOURCE_TTL_OUT =&H00000004
Public Const RESOURCE_OPTIC_IN =&H00000008
Public Const RESOURCE_OPTIC_OUT =&H00000010
Public Const RESOURCE_AD =&H00000020
Public Const RESOURCE_OC =&H00000040
Public Const RESOURCE_LINE =&H00000080
Public Const RESOURCE_CIRCLE =&H00000100
Public Const RESOURCE_PLC =&H00000200
Public Const RESOURCE_STREAM =&H00000400
Public Const RESOURCE_ENCODER =&H00000800

Declare Function MT_Init Lib "MT_API_Multi.dll" () As Long

Declare Function MT_DeInit Lib "MT_API_Multi.dll" () As Long

Declare Function MT_Get_Dll_Version Lib "MT_API_Multi.dll" (ByRef sVer As String) As Long

Declare Function MT_Set_Thread_Timeout Lib "MT_API_Multi.dll" (ByVal ms As Long) As Long

Declare Function MT_Open_UART Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal sCOM As String) As Long

Declare Function MT_Open_UART_Unicode Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal sCOM As String) As Long

Declare Function MT_Close_UART Lib "MT_API_Multi.dll" (ByVal ADev As Long) As Long

Declare Function MT_Open_USB Lib "MT_API_Multi.dll" (ByVal ADev As Long) As Long

Declare Function MT_Close_USB Lib "MT_API_Multi.dll" (ByVal ADev As Long) As Long

Declare Function MT_Open_Net Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal IP0 As Byte,ByVal IP1 As Byte,ByVal IP2 As Byte,ByVal IP3 As Byte,ByVal IPPort As Integer) As Long

Declare Function MT_Close_Net Lib "MT_API_Multi.dll" (ByVal ADev As Long) As Long

Declare Function MT_Check Lib "MT_API_Multi.dll" (ByVal ADev As Long) As Long

Declare Function MT_Get_Product_Resource Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByRef pValue As Long) As Long

Declare Function MT_Get_Product_ID Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal sID As String) As Long

Declare Function MT_Get_Product_SN Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal sSN As String) As Long

Declare Function MT_Get_Product_SN2 Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal sSN As Long) As Long

Declare Function MT_Get_Product_SN3 Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal sSN As String) As Long

Declare Function MT_Get_Product_Version Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByRef pMajor As Long,ByRef pMinor As Long) As Long

Declare Function MT_Get_Product_Version2 Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByRef pMajor As Long,ByRef pMinor As Long,ByRef pRelease As Long,ByRef pBuild As Long) As Long

Declare Function MT_Get_Axis_Num Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByRef pValue As Long) As Long

Declare Function MT_Get_Axis_Acc Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByRef pValue As Long) As Long

Declare Function MT_Set_Axis_Acc Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal Value As Long) As Long

Declare Function MT_Get_Axis_Dec Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByRef pValue As Long) As Long

Declare Function MT_Set_Axis_Dec Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal Value As Long) As Long

Declare Function MT_Get_Axis_Mode Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByRef pValue As Long) As Long

Declare Function MT_Set_Axis_Mode_Velocity Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer) As Long

Declare Function MT_Set_Axis_Mode_Position Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer) As Long

Declare Function MT_Set_Axis_Mode_Position_Open Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer) As Long

Declare Function MT_Set_Axis_Mode_Position_Close Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer) As Long

Declare Function MT_Get_Axis_Velocity_V_Target Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByRef pValue As Long) As Long

Declare Function MT_Set_Axis_Velocity_V_Target_Abs Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal Value As Long) As Long

Declare Function MT_Set_Axis_Velocity_V_Target_Rel Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal Value As Long) As Long

Declare Function MT_Set_Axis_Velocity_Stop Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer) As Long

Declare Function MT_Get_Axis_Position_V_Max Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByRef pValue As Long) As Long

Declare Function MT_Set_Axis_Position_V_Max Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal Value As Long) As Long

Declare Function MT_Get_Axis_Position_P_Target Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByRef pValue As Long) As Long

Declare Function MT_Set_Axis_Position_P_Target_Abs Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal Value As Long) As Long

Declare Function MT_Set_Axis_Position_P_Target_Rel Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal Value As Long) As Long

Declare Function MT_Set_Axis_Position_Stop Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer) As Long

Declare Function MT_Set_Axis_Position_Close_Dec_Factor Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal AFactor As Single) As Long

Declare Function MT_Set_Axis_Halt Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer) As Long

Declare Function MT_Set_Axis_Halt_All Lib "MT_API_Multi.dll" (ByVal ADev As Long) As Long

Declare Function MT_Get_Axis_V_Now Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByRef pValue As Long) As Long

Declare Function MT_Get_Axis_Software_P_Now Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByRef pValue As Long) As Long

Declare Function MT_Set_Axis_Software_P Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal Value As Long) As Long

Declare Function MT_Get_Axis_Status Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByRef pRun As Byte,ByRef pDir As Byte,ByRef pNeg As Byte,ByRef pPos As Byte,ByRef pZero As Byte,ByRef pMode As Byte) As Long

Declare Function MT_Get_Axis_Status2 Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByRef pRun As Long,ByRef pDir As Long,ByRef pNeg As Long,ByRef pPos As Long,ByRef pZero As Long,ByRef pMode As Long) As Long

Declare Function MT_Get_Axis_Status_Run Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByRef pRun As Long) As Long

Declare Function MT_Get_Axis_Status_Dir Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByRef pDir As Long) As Long

Declare Function MT_Get_Axis_Status_Neg Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByRef pNeg As Long) As Long

Declare Function MT_Get_Axis_Status_Pos Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByRef pPos As Long) As Long

Declare Function MT_Get_Axis_Status_Zero Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByRef pZero As Long) As Long

Declare Function MT_Get_Axis_Status_Mode Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByRef pMode As Long) As Long

Declare Function MT_Get_Param_Mem_Len Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByRef pValue As Long) As Long

Declare Function MT_Get_Param_Mem_Data Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByRef pValue As Byte) As Long

Declare Function MT_Set_Param_Mem_Data Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal Value As Byte) As Long

Declare Function MT_Get_System_Mem_Len Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByRef pValue As Long) As Long

Declare Function MT_Get_System_Mem_Data Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByRef pValue As Byte) As Long

Declare Function MT_Set_System_Mem_Data Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal Value As Byte) As Long

Declare Function MT_Get_Optic_In_Num Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByRef pValue As Long) As Long

Declare Function MT_Get_Optic_In_Basic_Num Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByRef pValue As Long) As Long

Declare Function MT_Get_Optic_In_Single Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByRef pValue As Long) As Long

Declare Function MT_Get_Optic_In_All Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByRef pValue As Long) As Long

Declare Function MT_Get_Optic_Out_Num Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByRef pValue As Long) As Long

Declare Function MT_Set_Optic_Out_Single Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal Value As Long) As Long

Declare Function MT_Set_Optic_Out_All Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal Value As Long) As Long

Declare Function MT_Get_Optic_Out_Single Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByRef pValue As Long) As Long

Declare Function MT_Get_Optic_Out_All Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByRef pValue As Long) As Long

Declare Function MT_Get_OC_Out_Num Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByRef pValue As Long) As Long

Declare Function MT_Set_OC_Out_Single Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal Value As Long) As Long

Declare Function MT_Set_OC_Out_All Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal Value As Long) As Long

Declare Function MT_Get_OC_Out_Single Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByRef pValue As Long) As Long

Declare Function MT_Get_OC_Out_All Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByRef pValue As Long) As Long

Declare Function MT_Set_Axis_Mode_Home Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer) As Long

Declare Function MT_Set_Axis_Mode_Home_Home_Switch Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer) As Long

Declare Function MT_Set_Axis_Mode_Home_Encoder_Index Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer) As Long

Declare Function MT_Set_Axis_Mode_Home_Encoder_Home_Switch Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer) As Long

Declare Function MT_Set_Axis_Mode_Home_Home_Zero Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer) As Long

Declare Function MT_Set_Axis_Home_V Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal Value As Long) As Long

Declare Function MT_Set_Axis_Home_Stop Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer) As Long

Declare Function MT_Set_Axis_Software_Limit_Neg_Value Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal Value As Long) As Long

Declare Function MT_Set_Axis_Software_Limit_Pos_Value Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal Value As Long) As Long

Declare Function MT_Set_Axis_Software_Limit_Enable Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer) As Long

Declare Function MT_Set_Axis_Software_Limit_Disable Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer) As Long

Declare Function MT_Set_Axis_Line_Axis Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal Axis_ID0 As Long,ByVal Axis_ID1 As Long) As Long

Declare Function MT_Set_Axis_Line_Acc Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal Value As Long) As Long

Declare Function MT_Set_Axis_Line_Dec Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal Value As Long) As Long

Declare Function MT_Set_Axis_Line_V Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer,ByVal Value As Long) As Long

Declare Function MT_Set_Axis_Line_Run Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer) As Long

Declare Function MT_Set_Axis_Line_Stop Lib "MT_API_Multi.dll" (ByVal ADev As Long,ByVal AObj As Integer) As Long
